# anchr-docling

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: output-formats-and-images.md
scripts/: verify_bbox.py  verify_pdf_bbox.py
src/anchr_docling/: __init__.py  _sanitize.py  _utils.py  blocks.py  chunking.py  config.py  docling_parser.py  errors.py  images.py  jobs.py  main.py  schemas.py  security.py  setup.py
tests/: test_api.py  test_embedded_image_upload.py  test_jobs.py  test_security.py
