[project]
name = "anchr-docling"
version = "0.1.0"
description = "Docling sidecar service for Anchr document parsing."
requires-python = ">=3.11"
dependencies = [
    "docling>=2.58.0",
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "ocrmac>=1.0.0; platform_system == 'Darwin'",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "uvicorn[standard]>=0.34.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/anchr_docling"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
